--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.4",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "uuid": "^10.0.0"
   }
 }
